<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity"
    android:gravity="top">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="normal"
        android:id="@+id/register_username"
        android:hint="@string/prompt_username"
        android:textColor="@color/white"
        android:inputType="textNoSuggestions" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="normal"
        android:id="@+id/register_email"
        android:hint="@string/prompt_email"
        android:inputType="textNoSuggestions" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="normal"
        android:id="@+id/register_password"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="normal"
        android:id="@+id/register_confirm_password"
        android:hint="@string/prompt_password_again"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_sign_up_button"
        style="?android:textAppearanceMedium"
        android:textColor="@color/white"
        android:onClick="signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_up"
        android:textStyle="bold"/>
</LinearLayout>