<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/teal_200"
    tools:context=".MainActivity"
    android:gravity="bottom">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_foreground"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="normal"
        android:textColorHint="@color/white"
        android:id="@+id/login_email"
        android:hint="@string/prompt_email"
        android:textColor="@color/white"
        android:inputType="textNoSuggestions" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="normal"
        android:textColorHint="@color/white"
        android:id="@+id/login_password"
        android:hint="@string/prompt_password"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_sign_in_button"
        style="?android:textAppearanceMedium"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="signInExistingUser"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_register_button"
        style="?android:textAppearanceMedium"
        android:textColor="@color/white"
        android:onClick="registerNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_register"
        android:textStyle="bold"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>



</LinearLayout>